.jar premier jour et README update