@@ -4,3 +4,8 @@ Pour exécuter le programme
 ```bash
 ./gradlew run
 ```
+
+Pour exécuter le .jar
+```bash
+java --module-path ${JAVAFX_HOME}/lib/  --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web -jar DirectDealing.jar
+```
